welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:25: error: type mismatch;
 found   : Unit
 required: Boolean
  if (Vrai == true) {
  ^